// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorStep > should display error details 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex flex-row items-center justify-start gap-3"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Error
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-4"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                Display error details
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-145pihz"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should emit onBack 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex flex-row items-center justify-start gap-3"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Custom error title
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-4"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-145pihz"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
      <button
        class="css-fl4fi0"
        data-testid="ErrorStep__back-button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="whitespace-nowrap"
          >
            Back
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should emit onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex flex-row items-center justify-start gap-3"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Custom error title
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-4"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-145pihz"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
      <button
        class="css-6419sw"
        data-testid="ErrorStep__close-button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="whitespace-nowrap"
          >
            Close
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should render with custom title 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex flex-row items-center justify-start gap-3"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Custom error title
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-4"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-145pihz"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should render with default texts 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex flex-row items-center justify-start gap-3"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Error
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-4"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while sending your transaction. Please go 'Back' and try again, or click 'Close' to return to the wallet.
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-145pihz"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
